# Weseliada

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Weseliada_pl_PL.ts  qml.qrc  qtquickcontrols2.conf  resources.qrc
include/: answerareamodel.h  answerlistmodel.h  questionlistmodel.h  scoreboardmodel.h  sidebarmodel.h  teamscoremodel.h
qml/: AnswerDelegate.qml  BoardView.qml  FinalStreamArea.qml  GameBoard.qml  GamePanel.qml  GamePanelForm.ui.qml  MainWindowToolBar.qml  QuestionDelegate.qml  Scoreboard.qml  ScoreboardForm.ui.qml  SidebarControlPanel.qml  TeamScore.qml  TextField.qml  TextFieldForm.ui.qml  main.qml
resources/data/: questions.json
src/: answerareamodel.cpp  answerlistmodel.cpp  main.cpp  questionlistmodel.cpp  scoreboardmodel.cpp  sidebarmodel.cpp  teamscoremodel.cpp
